# VK-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile-shaders.sh  imgui.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cmake.yml
resources/shaders/source/: vk.vert
src/: main.cpp
src/api/app-context/: vk_device.cpp  vk_device.h  vk_instance.cpp  vk_swapchain.cpp  vk_swapchain.h  vk_window.cpp  vk_window.h
src/api/commands/: vk_command_buffer.cpp  vk_command_buffer.h  vk_command_pool.cpp  vk_command_pool.h
src/api/definitions/: vk_uniforms.h
src/api/descriptors/: vk_descriptor_set.cpp  vk_descriptor_set.h  vk_descriptor_set_layout.cpp  vk_descriptor_set_layout.h
src/api/graphics-pipeline/: vk_graphics_pipeline.cpp  vk_graphics_pipeline.h  vk_renderpass.cpp  vk_renderpass.h  vk_shader_module.cpp  vk_shader_module.h
src/api/memory/: vk_buffer.cpp  vk_buffer.h  vk_vma_allocator.cpp  vk_vma_allocator.h
src/app-context/: vk_application_context.cpp  vk_application_context.h  vk_device.cpp  vk_device.h  vk_instance.cpp  vk_instance.h  vk_swapchain.cpp  vk_swapchain.h  vk_window.cpp  vk_window.h
src/buffer/: vk_buffer.cpp  vk_buffer.h  vk_descriptor_set.cpp  vk_descriptor_set.h  vk_descriptor_set_layout.cpp  vk_descriptor_set_layout.h
src/commands/: vk_command_buffer.cpp  vk_command_buffer.h  vk_command_pool.cpp  vk_command_pool.h
src/definitions/: vk_vertex.h
src/descriptors/: vk_descriptor_set.cpp  vk_descriptor_set.h  vk_descriptor_set_layout.cpp  vk_descriptor_set_layout.h
src/graphics-pipeline/: vk_framebuffer.cpp  vk_framebuffer.h  vk_graphics_pipeline.cpp  vk_graphics_pipeline.h  vk_renderpass.cpp  vk_renderpass.h  vk_shader_module.cpp  vk_shader_module.h
src/memory/: vk_buffer.cpp  vk_buffer.h  vk_vma_allocator.cpp  vk_vma_allocator.h
src/renderer/: vk_renderer.cpp  vk_renderer.h
src/utils/: vk_api_object.h  vk_io.h  vk_utils.h
